--- a/ansible/linux.yaml
+++ b/ansible/linux.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Add users on Linux
   hosts: ubuntu
-  remote_user: sysadmin
+  remote_user: DocHoliday
   become: yes
   tasks:
     - name: Create a password for user jftp
